--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an aspiring web developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Glenwood Springs.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Dancing, climbing and playing video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>No idea.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Glendale/Cherry Creek.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to design a social media platform for painters, sculptors, and artisans of fine handcrafted products.</p>
     </section>
 
     <footer id="footer">
